tests/integration/fail/comparison_le_string_number.ncl
# test = 'error' 
#
# [metadata]
# error = 'EvalError::NAryPrimopTypeError'
"a" < 2
